--- a/pages/index.css
+++ b/pages/index.css
@@ -10,7 +10,7 @@
 }
 
 .header {
-    padding: 30p 80px 40px;
+    padding: 30px 80px 40px;
     min-height: 720px;
     max-height: 800px;
     height: 100vh;
@@ -45,7 +45,7 @@
     color: black;
     font-family: "Inter";
     font-style: normal;
-    font-weight: 500px;
+    font-weight: 500;
     font-size: 16px;
     line-height: 20px;
 }
@@ -75,7 +75,7 @@
   font-size: 60px;
   line-height: 70px;
   margin: 183px 0 0;
-  letter-spacing: -0.6;
+  letter-spacing: 0;
   font-weight: 500;
   font-family:  "Noto Serif";
   font-style: normal;
