--- a/pages/index.css
+++ b/pages/index.css
@@ -103,7 +103,7 @@
   margin-top: auto;
   font-family: "Inter";
   font-style: normal;
-  font-weight: 500px;
+  font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   color: #838383;
