New update for my project

--- a/pages/index.css
+++ b/pages/index.css
@@ -155,7 +155,7 @@
     justify-content: space-between;
 }
 
-.recipes .background_image_recipes {
+.background_image_recipes {
     position: absolute;
     top: 0;
     left: 0;
