--- a/pages/index.css
+++ b/pages/index.css
@@ -1,26 +1,26 @@
 .page {
-    font-family: Inter, Arial, sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    min-width: 1100px;
-    max-width: 1600px;
-    margin: auto;
-    position: relative;
-    color: #000
+  font-family: 'Inter', Arial, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  min-width: 1100px;
+  max-width: 1600px;
+  margin: auto;
+  position: relative;
+  color: #000;
 }
 
 .header {
-    padding: 30px 80px 40px;
-    min-height: 720px;
-    max-height: 800px;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background-color: #ffffff;
-    background-image: url(../images/background_header.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: right;
+  padding: 30px 80px 40px;
+  min-height: 720px;
+  max-height: 800px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  background-image: url(../images/background_header.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
 }
 
 .header__span-accent {
@@ -35,27 +35,23 @@
   max-width: 646px;
   max-height: 568px;
   background-size: cover;
-
-
 }
 
 .nav {
-    display: flex;
-    justify-content: space-between;
-    color: black;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
+  display: flex;
+  justify-content: space-between;
+  font-family: 'Inter';
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .nav__links {
-    display: flex;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    gap: 20px;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  gap: 20px;
 }
 
 .nav__link {
@@ -74,99 +70,5 @@
   max-width: 729px;
   font-size: 60px;
   line-height: 70px;
-  margin: 183px 0 0;
-  letter-spacing: 0;
-  font-weight: 500;
-  font-family:  "Noto Serif";
-  font-style: normal;
+  margin-top: 183px;
 
-}
-
-.header__paragragh {
-  margin: 0;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__description {
-    max-width: 683px;
-    font-size: 20px;
-    line-height: 30px;
-    margin: 28px 0 0;
-}
-
-.header__footer {
-  display: flex;
-  justify-content: space-between;
-  margin-top: auto;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-}
-
-.recipes {
-    padding: 100px 80px 215px;
-    background-color: #0a2750;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    overflow: hidden;
-}
-
-.recipes__title {
-    display: flex;
-    flex-direction: column;
-    max-width: 580px;
-    margin-bottom: 24px;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
-
-}
-
-.recipes__subtitle {
-    max-width: 438px;
-    margin-bottom: 80px;
-    font-family: "Noto Serif";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-
-}
-
-.recipes__videos {
-    display: flex;
-    gap: 40px;
-    justify-content: center;
-    margin-bottom: 24px;
-}
-
-.recipes__video-caption{
-    display: flex;
-    justify-content: space-between;
-}
-
-.background_image_recipes {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit:cover;
-    z-index: 0;
-    opacity: 0.8;
-}
-
-.recipes__title, .recipes__subtitle, .recipes__videos {
-    position: relative;
-    z-index: 1; /* Ensure content is above the background image */
-}
