--- a/pages/index.css
+++ b/pages/index.css
@@ -1,243 +1,10 @@
-.page {
-  font-family: 'Inter', Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: auto;
-  position: relative;
-  color: #000;
-}
-
-.header {
-  padding: 30px 80px 40px;
-  min-height: 720px;
-  max-height: 800px;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  background-color: #ffffff;
-  background-image: url(../images/background_header.svg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: right;
-  font-family: "Noto Serif";
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 72px;
-}
-
-.header__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-}
-
-.header__span-accent {
-  font-family: "Noto Serif";
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 72px;
-  color: #3F96F3;
-}
-
-.header__description {
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.image {
-  position: absolute;
-  right: 5px;
-  top: 124px;
-  max-width: 646px;
-  max-height: 568px;
-  background-size: cover;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  font-family: 'Inter';
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__links {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-  gap: 20px;
-}
-
-.nav__link {
-  color: black;
-  text-decoration: none;
-}
-
-.nav__logo {
-  position: relative;
-  left: -50px;
-  width: 105px;
-  height: 39px;
-}
-
-.header__title {
-  max-width: 729px;
-  font-size: 60px;
-  line-height: 70px;
-  margin-top: 183px;
-}
-
-.header__paragraphs {
-  display: flex;
-}
-
-.header__image {
-  font-size: 16px;
-}
-
-.footer {
-  margin: 40px 80px;
-  display: flex;
-  justify-content: space-between;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #6f6f6f
-}
-
-.recipes {
-  color: #ffffff;
-  background-color: #0a2750;
-  padding: 100px 80px 215px;
-  background-image: url(../images/background_recipes.svg)
-}
-
-.recipes__title {
-  margin: 0 0 24px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  margin: 0 0 80px;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  gap: 100px;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__background-image {
-  display: flex;
-}
-
-.reservation {
-  padding: 100px 0 120px;
-  background-image: url(../images/background_reservation.svg);
-  background-color: #D9E7FF;
-}
-
-.reservation__title {
-  margin:0 0 80px;
-  text-align: center;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form {
-  max-width: 385px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.form__fieldset {
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-.form__input {
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 15px 20px;
-  margin: 8px 0 32px;
-  border: 1px solid #838383;
-  color: #000;
-}
-
-.form__button {
-  width: 100%;
-  text-align: center;
-  background-color: #1878DC;
-  border-radius: 4px;
-  color: #ffffff;
-  padding: 20px 0;
-  margin-bottom: 32px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  gap: 12px;
-  justify-content: center;
-}
-
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/card.css);
+@import url(../blocks/about.css);
+@import url(../blocks/footer.css);
