--- a/blocks/form.css
+++ b/blocks/form.css
@@ -21,6 +21,11 @@
     margin: 8px 0 32px;
     border: 1px solid #838383;
     color: #000;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 30px;
   }
 
   .form__button {
@@ -48,6 +53,14 @@
     border-radius: 2px;
     width: 20px;
     height: 20px;
+  }
+
+  .form__label {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 30px;
   }
 
   .form__label_type_checkbox {
