--- a/blocks/header.css
+++ b/blocks/header.css
@@ -11,7 +11,7 @@
     background-repeat: no-repeat;
     background-position: right;
     font-family: "Noto Serif";
-    font-style: italic;
+    font-style: normal;
     font-weight: normal;
     font-size: 60px;
     line-height: 72px;
@@ -40,6 +40,7 @@
   .header__span-accent {
     color: #3F96F3;
     display: block;
+    font-style: italic;
   }
 
   .header__description {
