--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -1,9 +1,9 @@
 .reservation {
     padding: 100px 0 120px;
     background-image: url(../images/background_reservation.svg);
-    background-color: #a9b8d0;
+    background-color: #D9E7FF;
   }
-  
+
   .reservation__title {
     margin:0 0 80px;
     text-align: center;
@@ -13,7 +13,7 @@
     font-size: 44px;
     line-height: 52px;
   }
-  
+
   .reservation__form {
     margin: 0 auto;
     font-family: Inter;
