--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-@import url(../blocks/page.css);
+@import url(../blocks/pages.css);
 @import url(../blocks/header.css);
 @import url(../blocks/nav.css);
 @import url(../blocks/recipes.css);
