--- a/blocks/about.css
+++ b/blocks/about.css
@@ -11,11 +11,14 @@
 
 .about__content {
   max-width: 660px;
+  display: flex;
+  flex-direction: column;
   font-family: "Noto Serif";
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
+  gap: 20px+;
 }
 
 .about__title {
@@ -29,11 +32,17 @@
 }
 
 .about__paragraph {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
   margin: 0;
-  margin: 0 0 20px;
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+.about__paragraph:last-child {
+
 }
 
 .about__circle {
