--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -9,7 +9,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 108px;
 }
 
 .footer__logo {
@@ -19,6 +18,11 @@
 
 .footer__column-heading {
   margin: 0 0 20px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
 }
 
 .footer__list {
