--- a/blocks/form.css
+++ b/blocks/form.css
@@ -26,12 +26,14 @@
     font-weight: normal;
     font-size: 20px;
     line-height: 30px;
+    border-radius: 4px;
   }
 
   .form__button {
     width: 100%;
     text-align: center;
     background-color: #1878DC;
+    border: none;
     border-radius: 4px;
     color: #ffffff;
     padding: 20px 0;
@@ -58,9 +60,9 @@
   .form__label {
     font-family: Inter;
     font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
+    font-weight: 500px;
+    font-size: 16px;
+    line-height: 20px;
   }
 
   .form__label_type_checkbox {
