--- a/blocks/header.css
+++ b/blocks/header.css
@@ -41,6 +41,11 @@
     color: #3F96F3;
     display: block;
     font-style: italic;
+    font-family: "Noto Serif";
+    font-style: italic;
+    font-weight: normal;
+    font-size: 60px;
+    line-height: 72px;
   }
 
   .header__description {
@@ -52,9 +57,10 @@
   }
 
   .header__footer {
-    margin-top: auto;
+    margin: 0 80px 40px 80px;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 40px;
   }
 
   .header__paragraph {
@@ -70,5 +76,5 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
-    color: #6f6f6f
+    color: #6f6f6f;
   }
