--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     align-items: center;
     background-image: url(../images/background_menu.svg) ;
+    background-size: cover;
+    background-position: center;
 }
 
 .menu__title {
@@ -14,6 +16,7 @@
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
+  align-items: center;
 }
 
 .menu__subtitle {
