--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -2,18 +2,21 @@
     color: #ffffff;
     background-color: #0a2750;
     padding: 100px 80px 215px;
-    background-image: url(../images/background_recipes.svg)
+    background-image: url(../images/background_recipes.svg);
+    background-size: cover;
+    background-position: center;
+    gap: 40px;
   }
-  
+
   .recipes__title {
     margin: 0 0 24px;
-    font-family: "Inter";
+    font-family: "Inter", Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 44px;
     line-height: 52px;
   }
-  
+
   .recipes__subtitle {
     margin: 0 0 80px;
     font-family: "Noto Serif";
@@ -22,13 +25,19 @@
     font-size: 20px;
     line-height: 30px;
   }
-  
+
   .recipes__videos {
     display: flex;
     justify-content: center;
-    gap: 100px;
+    gap: 24px;
   }
-  
+
+  .recipes__iframe {
+    width: 480px;
+    height: 273px;
+    border: default ;
+  }
+
   .recipes__video-caption {
     display: flex;
     justify-content: space-between;
@@ -37,8 +46,5 @@
     font-weight: 500;
     font-size: 20px;
     line-height: 30px;
-  }
-  
-  .recipes__background-image {
-    display: flex;
+    margin: 0;
   }
