--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -2,6 +2,8 @@
     padding: 100px 0 120px;
     background-image: url(../images/background_reservation.svg);
     background-color: #D9E7FF;
+    background-size: cover;
+    background-position: center;
   }
 
   .reservation__title {
