--- a/blocks/about.css
+++ b/blocks/about.css
@@ -13,17 +13,18 @@
   max-width: 660px;
   display: flex;
   flex-direction: column;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif",
+   "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  gap: 20px+;
+  gap: 20px;
 }
 
 .about__title {
   max-width: 251px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -39,10 +40,6 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-}
-
-.about__paragraph:last-child {
-
 }
 
 .about__circle {
