--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -18,7 +18,7 @@
 
 .footer__column-heading {
   margin: 0 0 20px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -45,6 +45,7 @@
   text-decoration: none;
   display: flex;
   align-items: center;
+  transition: 0.5s;
  }
 
  .footer__social-link:hover {
