--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,6 +1,6 @@
 .form {
     max-width: 385px;
-    font-family: Inter;
+    font-family: "Inter", Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
@@ -38,7 +38,7 @@
     color: #ffffff;
     padding: 20px 0;
     margin-bottom: 32px;
-    font-family: Inter;
+    font-family: "Inter "Arial, sans-serif;;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -58,7 +58,7 @@
   }
 
   .form__label {
-    font-family: Inter;
+    font-family: "Inter", Arial, sans-serif;
     font-style: normal;
     font-weight: 500px;
     font-size: 16px;
