--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,8 +1,7 @@
 .header {
     padding: 30px 80px 40px;
     min-height: 720px;
-    max-height: 800px;
-    height: 100vh;
+    height: 800px;
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
@@ -10,11 +9,13 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: right;
-    font-family: "Noto Serif";
+    font-family: "Noto Serif", Arial, sans-serif;;
     font-style: normal;
     font-weight: normal;
     font-size: 60px;
     line-height: 72px;
+    letter-spacing: -0.6px;
+    position: relative;
 
   }
 
@@ -24,6 +25,7 @@
     right: 5px;
     width: 646px;
     height: 568px;
+    z-index: +1;
   }
 
   .header__title {
@@ -41,7 +43,7 @@
     color: #3F96F3;
     display: block;
     font-style: italic;
-    font-family: "Noto Serif";
+    font-family: "Noto Serif", Arial, sans-serif;
     font-style: italic;
     font-weight: normal;
     font-size: 60px;
@@ -57,10 +59,16 @@
   }
 
   .header__footer {
-    margin: 0 80px 40px 80px;
+    margin-top: auto;
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
+    font-family: "Inter", Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: #6f6f6f;
   }
 
   .header__paragraph {
@@ -68,13 +76,13 @@
   }
 
   .header__footer {
-    margin: 40px 80px;
     display: flex;
     justify-content: space-between;
-    font-family: "Inter";
+    font-family: "Inter", Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
     color: #6f6f6f;
+    align-items: ;
   }
