--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -11,7 +11,7 @@
 .menu__title {
   margin: 0 0 24px;
   max-width: 780px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -23,7 +23,7 @@
   margin: 0 0 100px;
   max-width: 780px;
   align-items: center;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -38,7 +38,7 @@
   flex-wrap: wrap;
   gap: 100px;
   justify-content: center;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
