--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,7 +1,7 @@
 .nav {
     display: flex;
     justify-content: space-between;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
@@ -18,7 +18,7 @@
   .nav__link {
     color: black;
     text-decoration: none;
-    transform: 0.5s;
+    transition: 0.5s;
     cursor: pointer;
   }
 
