--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -19,7 +19,7 @@
 
   .recipes__subtitle {
     margin: 0 0 80px;
-    font-family: "Noto Serif";
+    font-family: "Noto Serif", Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
@@ -41,7 +41,7 @@
   .recipes__video-caption {
     display: flex;
     justify-content: space-between;
-    font-family: "Inter";
+    font-family: "Inter", Arial, sans-serif;;
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
