--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -9,7 +9,7 @@
   .reservation__title {
     margin:0 0 80px;
     text-align: center;
-    font-family: Inter;
+    font-family: "Inter", Arial, sans-serif;;
     font-style: normal;
     font-weight: 500;
     font-size: 44px;
@@ -18,7 +18,7 @@
 
   .reservation__form {
     margin: 0 auto;
-    font-family: Inter;
+    font-family: "Inter", Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
