--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,88 +1,85 @@
 .header {
-    padding: 30px 80px 40px;
-    min-height: 720px;
-    height: 800px;
-    display: flex;
-    flex-direction: column;
-    background-color: #ffffff;
-    background-image: url(../images/background_header.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: right;
-    font-family: "Noto Serif", Arial, sans-serif;;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 60px;
-    line-height: 72px;
-    letter-spacing: -0.6px;
-    position: relative;
+  padding: 30px 80px 40px;
+  min-height: 720px;
+  height: 800px;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  background-image: url(../images/background_header.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
+  font-family: "Noto Serif", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 72px;
+  letter-spacing: -0.6px;
+  position: relative;
+}
 
-  }
+.header__image {
+  position: absolute;
+  top: 124px;
+  right: 5px;
+  width: 646px;
+  height: 568px;
+  z-index: +1;
+}
 
-  .header__image {
-    position: absolute;
-    top: 124px;
-    right: 5px;
-    width: 646px;
-    height: 568px;
-    z-index: +1;
-  }
+.header__title {
+  margin: 183px 0 0;
+  font-family: "Inter", "Arial", sans-serif;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  letter-spacing: -0.6px;
+  max-width: 729px;
+}
 
-  .header__title {
-    margin: 183px 0 0;
-    font-family: "Inter", "Arial", sans-serif;
-    font-weight: 500;
-    font-size: 60px;
-    line-height: 72px;
-    letter-spacing: -0.6px;
-    max-width: 729px;
+.header__span-accent {
+  color: #3f96f3;
+  display: block;
+  font-style: italic;
+  font-family: "Noto Serif", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 72px;
+}
 
-  }
+.header__description {
+  font-family: "Noto Serif" "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
+  margin: 28px 0 0;
+  max-width: 683px;
+}
 
-  .header__span-accent {
-    color: #3F96F3;
-    display: block;
-    font-style: italic;
-    font-family: "Noto Serif", Arial, sans-serif;
-    font-style: italic;
-    font-weight: normal;
-    font-size: 60px;
-    line-height: 72px;
-  }
+.header__footer {
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #6f6f6f;
+}
 
-  .header__description {
-    font-family: "Noto Serif" "Times New Roman", serif;
-    font-size: 20px;
-    line-height: 30px;
-    margin: 28px 0 0;
-    max-width: 683px;
-  }
+.header__paragraph {
+  margin: 0;
+}
 
-  .header__footer {
-    margin-top: auto;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 40px;
-    font-family: "Inter", Arial, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    color: #6f6f6f;
-  }
-
-  .header__paragraph {
-    margin: 0;
-  }
-
-  .header__footer {
-    display: flex;
-    justify-content: space-between;
-    font-family: "Inter", Arial, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    color: #6f6f6f;
-    align-items: ;
-  }
+.header__footer {
+  display: flex;
+  justify-content: space-between;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #6f6f6f;
+}
